--- a/package.json
+++ b/package.json
@@ -1,68 +1,61 @@
 {
-  "name": "piskel-clone",
-  "version": "0.0.1",
-  "description": "piskel-clone",
-  "main": "src/app.js",
-  "scripts": {
-    "coverage": "jest --coverage",
-    "dev": "webpack-dev-server --mode development --watch",
-    "build": "webpack --mode production",
-    "lint": "eslint src/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/rolling-scopes-school/DmitriyParhomenko-2019Q1/tree/update-piskel-clone"
-  },
-  "author": "Dmitriy Parhomenko",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "babel-preset-es2015": "^6.24.1",
-    "canvas": "^2.5.0",
-    "canvas-prebuilt": "^2.0.0-alpha.14",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^2.1.1",
-    "cssnano": "^4.1.10",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.17.3",
-    "extract-loader": "^3.1.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^4.2.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "identity-obj-proxy": "^3.0.0",
-    "ignore-styles": "^5.0.1",
-    "image-webpack-loader": "^5.0.0",
-    "jest": "^24.8.0",
-    "jest-canvas-mock": "^2.1.0",
-    "jest-css-modules": "^2.1.0",
-    "jest-transform-stub": "^2.0.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "postcss-loader": "^3.0.0",
-    "raw-loader": "^3.1.0",
-    "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.4.1",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1"
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "^.+.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "jest-transform-stub"
+    "name": "piskel-clone",
+    "version": "0.0.2",
+    "description": "piskel-clone",
+    "main": "src/app.js",
+    "scripts": {
+        "coverage": "jest --coverage",
+        "dev": "webpack-dev-server --mode development",
+        "build": "webpack --mode production",
+        "lint": "eslint src/"
     },
-    "setupFiles": [
-      "jest-canvas-mock"
-    ]
-  },
-  "dependencies": {
-    "gif.js.optimized": "^1.0.1",
-    "upng-js": "^2.1.0"
-  }
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/rolling-scopes-school/DmitriyParhomenko-2019Q1/tree/update-piskel-clone"
+    },
+    "author": "Dmitriy Parhomenko",
+    "license": "ISC",
+    "dependencies": {
+        "@babel/core": "^7.21.0",
+        "@babel/polyfill": "^7.12.1",
+        "@babel/preset-env": "^7.20.2",
+        "@mapbox/node-pre-gyp": "^1.0.10",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^9.1.2",
+        "babel-preset-es2015": "^6.24.1",
+        "canvas": "^2.11.0",
+        "clean-webpack-plugin": "^4.0.0",
+        "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.7.3",
+        "cssnano": "^5.1.15",
+        "eslint": "^8.35.0",
+        "file-loader": "^6.2.0",
+        "gif.js.optimized": "^1.0.1",
+        "html-loader": "^4.2.0",
+        "html-webpack-plugin": "^5.5.0",
+        "identity-obj-proxy": "^3.0.0",
+        "ignore-styles": "^5.0.1",
+        "image-webpack-loader": "^8.1.0",
+        "jest": "^29.4.3",
+        "jest-canvas-mock": "^2.4.0",
+        "jest-css-modules": "^2.1.0",
+        "jest-transform-stub": "^2.0.0",
+        "mini-css-extract-plugin": "^2.7.2",
+        "postcss-loader": "^7.0.2",
+        "raw-loader": "^4.0.2",
+        "style-loader": "^3.3.1",
+        "terser-webpack-plugin": "^5.3.6",
+        "upng-js": "^2.1.0",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1",
+        "webpack-dev-server": "^4.11.1"
+    },
+    "jest": {
+        "moduleNameMapper": {
+            "^.+.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "jest-transform-stub"
+        },
+        "setupFiles": [
+            "jest-canvas-mock"
+        ]
+    }
 }
